fix: nprogress lower z-index

--- a/src/styles/css/nprogress.css
+++ b/src/styles/css/nprogress.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1031;
+  z-index: 1;
 
   width: 100%;
   height: 2px;
